First full version of README.md

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "flora",
     "version": "0.0.1",
-    "description": "FLexible Open Rest Api",
+    "description": "FLexible Open Rest API",
     "keywords": [
         "api",
         "framework",
