--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "chai-as-promised": "4.3.x",
         "eslint": "0.17.0",
         "istanbul": "0.3.x",
+        "jsdoc": "^3.3.0-beta2",
         "mocha": "2.1.x",
         "mock-fs": "2.5.x",
         "sinon": "1.13.x"
