--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     },
     "dependencies": {
         "bunyan": "1.3.x",
+        "flora-cluster": "~0.2.2",
         "flora-ql": "~2.2.1",
         "libxmljs": "0.13.x",
         "lodash": "3.5.x",
+        "serve-static": "1.9.x",
         "when": "3.7.x"
     },
     "devDependencies": {
