--- a/package.json
+++ b/package.json
@@ -1,70 +1,71 @@
 {
-    "name": "flora",
-    "version": "0.1.0",
-    "description": "FLexible Open Rest API",
-    "main": "index.js",
-    "scripts": {
-        "test": "grunt test",
-        "doc": "grunt doc",
-        "lint": "grunt lint"
+  "name": "flora",
+  "version": "0.1.0",
+  "description": "FLexible Open Rest API",
+  "main": "index.js",
+  "scripts": {
+    "test": "grunt test",
+    "doc": "grunt doc",
+    "lint": "grunt lint"
+  },
+  "keywords": [
+    "api",
+    "framework",
+    "rest"
+  ],
+  "author": {
+    "name": "BörseGo AG",
+    "email": "it@boerse-go.de"
+  },
+  "homepage": "https://github.com/godmodelabs/flora",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/godmodelabs/flora.git"
+  },
+  "contributors": [
+    {
+      "name": "Mark Plomer",
+      "email": "mark.plomer@boerse-go.de"
     },
-    "keywords": [
-        "api",
-        "framework",
-        "rest"
-    ],
-    "author": {
-        "name": "BörseGo AG",
-        "email": "it@boerse-go.de"
+    {
+      "name": "Nico Kaiser",
+      "email": "nico.kaiser@boerse-go.de"
     },
-    "homepage": "https://github.com/godmodelabs/flora",
-    "license": "MIT",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/godmodelabs/flora.git"
-    },
-    "contributors": [
-        {
-            "name": "Mark Plomer",
-            "email": "mark.plomer@boerse-go.de"
-        },
-        {
-            "name": "Nico Kaiser",
-            "email": "nico.kaiser@boerse-go.de"
-        },
-        {
-            "name": "Marco Baumgartl",
-            "email": "marco.baumgartl@boerse-go.de"
-        }
-    ],
-    "engines": {
-        "node": ">=0.10.0"
-    },
-    "dependencies": {
-        "bunyan": "1.3.x",
-        "flora-cluster": "~0.2.3",
-        "flora-ql": "~2.2.1",
-        "libxmljs": "0.13.x",
-        "lodash": "3.5.x",
-        "serve-static": "1.9.x",
-        "when": "3.7.x"
-    },
-    "devDependencies": {
-        "benchmark": "1.0.x",
-        "chai": "2.1.x",
-        "chai-as-promised": "4.3.x",
-        "eslint": "0.17.0",
-        "istanbul": "0.3.x",
-        "jsdoc": "^3.3.0-beta2",
-        "mocha": "2.1.x",
-        "mock-fs": "2.5.x",
-        "sinon": "1.13.x",
-        "mocha-bamboo-reporter": "*",
-        "grunt": "0.4.x",
-        "grunt-contrib-clean": "0.6.x",
-        "grunt-eslint": "9.0.x",
-        "grunt-jsdoc": "0.5.x",
-        "grunt-mocha-istanbul": "2.3.x",
-        "grunt-mocha-test": "0.12.x"
+    {
+      "name": "Marco Baumgartl",
+      "email": "marco.baumgartl@boerse-go.de"
     }
+  ],
+  "engines": {
+    "node": ">=0.10.0"
+  },
+  "dependencies": {
+    "bunyan": "1.3.x",
+    "flora-cluster": "~0.2.3",
+    "flora-ql": "~2.2.1",
+    "libxmljs": "0.13.x",
+    "lodash": "3.5.x",
+    "serve-static": "1.9.x",
+    "when": "3.7.x"
+  },
+  "devDependencies": {
+    "benchmark": "1.0.x",
+    "chai": "2.1.x",
+    "chai-as-promised": "4.3.x",
+    "eslint": "0.17.0",
+    "grunt": "0.4.x",
+    "grunt-contrib-clean": "0.6.x",
+    "grunt-eslint": "9.0.x",
+    "grunt-jsdoc": "0.5.x",
+    "grunt-mocha-istanbul": "2.3.x",
+    "grunt-mocha-test": "0.12.x",
+    "istanbul": "0.3.x",
+    "jsdoc": "^3.3.0-beta2",
+    "load-grunt-tasks": "^3.1.0",
+    "mocha": "2.1.x",
+    "mocha-bamboo-reporter": "*",
+    "mock-fs": "2.5.x",
+    "sinon": "1.13.x"
+  }
 }
