Add grunt-cli to package.json

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "chai-as-promised": "4.3.x",
     "eslint": "0.17.0",
     "grunt": "0.4.x",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "0.6.x",
     "grunt-eslint": "9.0.x",
     "grunt-jsdoc": "0.5.x",
