--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "node": ">=0.10.0"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "bunyan": "1.3.x",
     "flora-cluster": "~0.4.0",
     "flora-ql": "~2.2.1",
