--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "bunyan": "1.3.x",
+    "flora-errors": "~0.1.0",
     "flora-cluster": "~0.4.0",
     "flora-ql": "~2.2.1",
     "libxmljs": "0.13.x",
