--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "grunt-contrib-clean": "0.6.x",
     "grunt-eslint": "9.0.x",
     "grunt-jsdoc": "0.5.x",
-    "grunt-mocha-istanbul": "2.3.x",
+    "grunt-mocha-istanbul": "nicokaiser/grunt-mocha-istanbul#fix-node-execpath",
     "grunt-mocha-test": "0.12.x",
     "istanbul": "0.3.x",
     "jsdoc": "^3.3.0-beta2",
