--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "async": "^0.9.0",
+    "async-eventemitter": "^0.2.2",
     "bunyan": "1.3.x",
     "flora-errors": "~0.1.0",
     "flora-cluster": "~0.4.0",
