--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "async": "^0.9.0",
     "async-eventemitter": "^0.2.2",
     "bunyan": "1.3.x",
-    "flora-errors": "~0.1.0",
-    "flora-cluster": "~0.4.0",
-    "flora-ql": "~2.2.1",
+    "flora-errors": "^0.2.0",
+    "flora-cluster": "^0.4.0",
+    "flora-ql": "^2.4.0",
     "libxmljs": "0.14.x",
     "lodash": "3.8.x",
     "serve-static": "1.9.x",
