--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
     "async": "^1.3.0",
     "async-eventemitter": "^0.2.2",
     "bunyan": "1.4.x",
-    "flora-errors": "^0.2.0",
+    "chokidar": "^1.0.4",
     "flora-cluster": "^0.4.0",
+    "flora-errors": "^0.2.0",
     "flora-ql": "^2.4.0",
     "libxmljs": "0.14.x",
     "lodash": "3.10.x",
