--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,10 @@ node_js:
   - "0.12"
   - "iojs"
 sudo: false
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    packages:
+      - gcc-4.8
+      - g++-4.8
