--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ env:
   - CXX=g++-4.8
 addons:
   apt:
+    source:
+      - ubuntu-toolchain-r-test
     packages:
       - gcc-4.8
       - g++-4.8
