--- a/package.json
+++ b/package.json
@@ -42,34 +42,34 @@
   "dependencies": {
     "async": "^1.3.0",
     "async-eventemitter": "^0.2.2",
-    "bunyan": "1.5.x",
+    "bunyan": "^1.5.1",
     "chokidar": "^1.0.4",
     "flora-cluster": "^0.5.0",
     "flora-errors": "^0.2.0",
     "flora-ql": "^2.4.0",
-    "libxmljs": "0.14.x",
-    "lodash": "3.10.x",
-    "serve-static": "1.10.x",
-    "when": "3.7.x"
+    "libxmljs": "^0.14.3",
+    "lodash": "^3.10.1",
+    "serve-static": "^1.10.0",
+    "when": "^3.7.3"
   },
   "devDependencies": {
     "benchmark": "1.0.x",
-    "chai": "3.2.x",
+    "chai": "^3.3.0",
     "chai-as-promised": "5.1.x",
-    "eslint": "1.4.x",
-    "grunt": "0.4.x",
+    "eslint": "^1.5.1",
+    "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
-    "grunt-contrib-clean": "0.6.x",
-    "grunt-eslint": "17.1.x",
-    "grunt-jsdoc": "0.6.x",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-eslint": "^17.2.0",
+    "grunt-jsdoc": "^0.6.8",
     "grunt-mocha-istanbul": "^3.0.1",
-    "grunt-mocha-test": "0.12.x",
-    "istanbul": "0.3.x",
+    "grunt-mocha-test": "^0.12.7",
+    "istanbul": "^0.3.21",
     "jsdoc": "^3.3.0-beta2",
     "load-grunt-tasks": "^3.1.0",
-    "mocha": "2.3.x",
-    "mocha-bamboo-reporter": "*",
+    "mocha": "^2.3.3",
+    "mocha-bamboo-reporter": "^1.1.0",
     "mock-fs": "tschaub/mock-fs#6bb14913d622b5522adf247dccb67433fb1e86fa",
-    "sinon": "1.16.x"
+    "sinon": "^1.17.1"
   }
 }
