--- a/package.json
+++ b/package.json
@@ -53,9 +53,9 @@
     "when": "^3.7.3"
   },
   "devDependencies": {
-    "benchmark": "1.0.x",
+    "benchmark": "^1.0.0",
     "chai": "^3.3.0",
-    "chai-as-promised": "5.1.x",
+    "chai-as-promised": "^5.1.0",
     "eslint": "^1.5.1",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
