--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "load-grunt-tasks": "^3.1.0",
     "mocha": "^2.3.3",
     "mocha-bamboo-reporter": "^1.1.0",
-    "mock-fs": "tschaub/mock-fs#6bb14913d622b5522adf247dccb67433fb1e86fa",
+    "mock-fs": "catdad/mock-fs#14814ad4c087fe19b8236bbb25bb99a5780d103f",
     "sinon": "^1.17.1"
   }
 }
