--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "flora-ql": "^2.4.0",
     "libxmljs": "^0.15.0",
     "lodash": "^3.10.1",
+    "moment-timezone": "^0.4.1",
     "serve-static": "^1.10.0",
     "when": "^3.7.3"
   },
