--- a/package.json
+++ b/package.json
@@ -47,11 +47,11 @@
     "flora-cluster": "^0.5.0",
     "flora-errors": "^0.2.0",
     "flora-ql": "^2.4.0",
-    "libxmljs": "^0.15.0",
     "lodash": "^3.10.1",
     "moment-timezone": "^0.4.1",
     "serve-static": "^1.10.0",
-    "when": "^3.7.3"
+    "when": "^3.7.3",
+    "xmldom": "^0.1.19"
   },
   "devDependencies": {
     "benchmark": "^1.0.0",
