--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "eslint": "^1.5.1",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
-    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-clean": "^0.7.0",
     "grunt-eslint": "^17.2.0",
     "grunt-jsdoc": "^1.0.0",
     "grunt-mocha-istanbul": "^3.0.1",
@@ -70,7 +70,7 @@
     "load-grunt-tasks": "^3.1.0",
     "mocha": "^2.3.3",
     "mocha-bamboo-reporter": "^1.1.0",
-    "mock-fs": "catdad/mock-fs#14814ad4c087fe19b8236bbb25bb99a5780d103f",
+    "mock-fs": "^3.4.0",
     "sinon": "^1.17.1"
   }
 }
