--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,8 @@
     "no-use-before-define": 0,
     "quotes": [2, "single"],
     "radix": 2,
+    "semi": [2, "always"],
+    "space-before-function-paren": [2, {"anonymous": "always", "named": "never"}],
     "space-unary-ops": 0,
     "strict": [2, "global"],
     "valid-jsdoc": 0
