--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "chokidar": "^1.0.4",
     "flora-cluster": "^0.5.1",
     "flora-errors": "^0.2.0",
-    "flora-ql": "^2.4.0",
+    "flora-request-parser": "^0.2.0",
     "lodash": "^4.0.0",
     "moment-timezone": "^0.5.0",
     "serve-static": "^1.10.0",
