--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     }
   ],
   "engines": {
-    "node": ">=0.10.0",
-    "iojs": ">=2.0"
+    "node": ">=0.10.0"
   },
   "dependencies": {
     "async": "^1.3.0",
