--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/godmodelabs/flora",
   "license": "MIT",
-  "repository": "godmodelabs/",
+  "repository": "godmodelabs/flora",
   "contributors": [
     {
       "name": "Mark Plomer",
