application/x-www-form-urlencoded support

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "async-eventemitter": "^0.2.2",
     "bunyan": "^1.5.1",
     "chokidar": "^1.0.4",
+    "content-type": "^1.0.2",
     "flora-cluster": "^0.7.1",
     "flora-errors": "^0.7.0",
     "flora-request-parser": "^0.7.0",
