--- a/package.json
+++ b/package.json
@@ -47,13 +47,14 @@
     "flora-errors": "^0.7.1",
     "flora-request-parser": "^0.7.3",
     "has": "^1.0.1",
-    "lodash": "^4.0.0",
+    "lodash": "^4.17.11",
     "moment-timezone": "^0.5.0",
     "serve-static": "^1.10.0",
     "xmldom": "^0.1.19"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
+    "@types/chai": "^4.1.6",
+    "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "eslint": "^4.18.1",
     "eslint-config-airbnb-base": "^12.1.0",
@@ -70,7 +71,7 @@
     "load-grunt-tasks": "^3.1.0",
     "mocha": "^5.0.1",
     "mocha-bamboo-reporter": "^1.1.0",
-    "mock-fs": "^4.4.1",
+    "mock-fs": "^4.7.0",
     "sinon": "^4.3.0",
     "sinon-chai": "^2.12.0"
   }
