--- a/package.json
+++ b/package.json
@@ -40,8 +40,6 @@
   },
   "dependencies": {
     "@godmodelabs/busboy": "^0.3.1",
-    "async": "^2.6.1",
-    "async-eventemitter": "^0.2.2",
     "bunyan": "^1.5.1",
     "chokidar": "^2.0.4",
     "content-type": "^1.0.2",
@@ -51,6 +49,7 @@
     "has": "^1.0.3",
     "lodash": "^4.17.11",
     "moment-timezone": "^0.5.23",
+    "promise-events": "^0.1.4",
     "serve-static": "^1.10.0",
     "xmldom": "^0.1.19"
   },
