--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "bunyan": "^1.5.1",
     "chokidar": "^2.0.4",
     "content-type": "^1.0.2",
-    "flora-cluster": "^0.8.0",
-    "flora-errors": "^0.9.0",
+    "flora-cluster": "^2.0.0-alpha.1",
+    "flora-errors": "^0.9.1",
     "flora-request-parser": "^0.8.0",
     "has": "^1.0.3",
     "lodash": "^4.17.11",
@@ -57,7 +57,7 @@
     "@types/chai": "^4.1.6",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^5.8.0",
+    "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "jsdoc": "^3.5.3",
