Use Prettier for code style

--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "eslint": "^5.13.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^3.0.0",
     "jsdoc": "^3.5.3",
     "mocha": "^5.2.0",
     "mock-fs": "^4.8.0",
