--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,10 @@
 {
-  "extends": "airbnb-base",
-  "rules": {
-    "indent": [2, 4],
-    "strict": 0,
-    "comma-dangle": 0,
-    "no-underscore-dangle": 0,
-    "no-param-reassign": 0,
-    "prefer-template": 0,
-    "no-plusplus": 0,
-    "no-unused-vars": ["error", { "argsIgnorePattern": "next" }],
-    "prefer-destructuring": 0
-  },
-  "parserOptions": {
-    "ecmaVersion": 2017
-  }
+    "extends": ["eslint:recommended", "plugin:prettier/recommended"],
+    "env": {
+        "node": true,
+        "es6": true
+    },
+    "parserOptions": {
+        "ecmaVersion": 2017
+    }
 }
