--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "bunyan": "^1.8.12",
     "chokidar": "^3.0.1",
     "content-type": "^1.0.4",
-    "flora-cluster": "^2.0.0-alpha.2",
-    "flora-errors": "^2.0.0-alpha.1",
-    "flora-request-parser": "^2.2.0",
+    "flora-cluster": "^2.0.0",
+    "flora-errors": "^2.0.0",
+    "flora-request-parser": "^2.2.1",
     "has": "^1.0.3",
     "lodash": "^4.17.11",
     "moment-timezone": "^0.5.25",
