--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flora",
-  "version": "2.0.0-alpha.19",
+  "version": "2.0.0",
   "description": "FLexible Open Rest API",
   "main": "index.js",
   "scripts": {
