--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "lodash.merge": "^4.6.2",
     "lodash.pick": "^4.4.0",
     "lodash.uniq": "^4.5.0",
-    "moment-timezone": "^0.5.33",
+    "luxon": "^1.25.0",
     "promise-events": "^0.2.4",
     "serve-static": "^1.14.1",
     "@xmldom/xmldom": "^0.7.5"
