deps: use lodash modules

--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
     "flora-cluster": "^2.0.0",
     "flora-errors": "^2.0.0",
     "flora-request-parser": "^2.3.1",
-    "lodash": "^4.17.15",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.merge": "^4.6.2",
+    "lodash.pick": "^4.4.0",
+    "lodash.uniq": "^4.5.0",
     "moment-timezone": "^0.5.31",
     "promise-events": "^0.1.8",
     "serve-static": "^1.14.1",
