--- a/.eslintrc
+++ b/.eslintrc
@@ -6,5 +6,13 @@
     },
     "parserOptions": {
         "ecmaVersion": 2018
-    }
+    },
+    "overrides": [
+        {
+            "files": ["test/**/*.js"],
+            "env": {
+                "mocha": true
+            }
+        }
+    ]
 }
