--- a/examples/docker/package.json
+++ b/examples/docker/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flora-example",
   "dependencies": {
-    "flora": "^2.0.7",
-    "flora-mysql": "^2.0.4"
+    "flora": "^3.0.0",
+    "@florajs/datasource-mysql": "^4.0.0"
   }
 }
