--- a/package.json
+++ b/package.json
@@ -48,30 +48,30 @@
     "bunyan": "^1.8.15",
     "chokidar": "^3.5.2",
     "content-type": "^1.0.4",
-    "flora-cluster": "^2.0.2",
-    "flora-errors": "^2.1.0",
-    "flora-request-parser": "^2.3.1",
+    "@florajs/cluster": "^3.0.0",
+    "@florajs/errors": "^3.0.0",
+    "@florajs/request-parser": "^3.0.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.merge": "^4.6.2",
     "lodash.pick": "^4.4.0",
     "lodash.uniq": "^4.5.0",
-    "luxon": "^2.1.1",
+    "luxon": "^2.3.0",
     "promise-events": "^0.2.4",
-    "serve-static": "^1.14.1",
-    "@xmldom/xmldom": "^0.7.5"
+    "serve-static": "^1.14.2",
+    "@xmldom/xmldom": "^0.8.0"
   },
   "devDependencies": {
     "abstract-logging": "^2.0.1",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^8.3.0",
+    "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jsdoc": "^3.6.7",
     "mocha": "^9.1.3",
     "mock-fs": "^5.1.2",
     "pre-commit": "^1.2.2",
-    "prettier": "^2.5.0",
+    "prettier": "^2.5.1",
     "sinon": "^12.0.1",
     "sinon-chai": "^3.7.0"
   }
