--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "florajs"
   ],
   "author": {
-    "name": "BörseGo AG",
-    "email": "it@boerse-go.de"
+    "name": "stock3 AG",
+    "email": "it@stock3.com"
   },
   "homepage": "https://github.com/florajs/flora",
   "license": "MIT",
@@ -30,15 +30,15 @@
   "contributors": [
     {
       "name": "Mark Plomer",
-      "email": "mark.plomer@boerse-go.de"
+      "email": "mark.plomer@stock3.com"
     },
     {
       "name": "Nico Kaiser",
-      "email": "nico.kaiser@boerse-go.de"
+      "email": "nico.kaiser@stock3.com"
     },
     {
       "name": "Marco Baumgartl",
-      "email": "marco.baumgartl@boerse-go.de"
+      "email": "marco.baumgartl@stock3.com"
     }
   ],
   "engines": {
@@ -48,27 +48,27 @@
     "@florajs/cluster": "^3.0.0",
     "@florajs/errors": "^3.0.0",
     "@florajs/request-parser": "^3.1.0",
-    "@xmldom/xmldom": "^0.8.6",
+    "@xmldom/xmldom": "^0.8.10",
     "bunyan": "^1.8.15",
     "chokidar": "^3.5.3",
-    "content-type": "^1.0.4",
+    "content-type": "^1.0.5",
     "lodash.clonedeep": "^4.5.0",
-    "luxon": "^3.1.0",
+    "luxon": "^3.3.0",
     "promise-events": "^0.2.4",
     "serve-static": "^1.15.0"
   },
   "devDependencies": {
     "abstract-logging": "^2.0.1",
     "chai": "^4.3.7",
-    "eslint": "^8.27.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jsdoc": "^4.0.0",
-    "mocha": "^10.1.0",
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jsdoc": "^4.0.2",
+    "mocha": "^10.2.0",
     "mock-fs": "^5.2.0",
     "pre-commit": "^1.2.2",
-    "prettier": "^2.7.1",
-    "sinon": "^14.0.2",
+    "prettier": "^3.0.1",
+    "sinon": "^15.2.0",
     "sinon-chai": "^3.7.0"
   }
 }
