--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: ['16', '18', '20']
+        node: ['16', '18', '20', '22']
     steps:
       - uses: actions/checkout@v2
       - name: Setup node ${{ matrix.node }}
