--- a/package.json
+++ b/package.json
@@ -42,12 +42,12 @@
     }
   ],
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   },
   "dependencies": {
     "@florajs/cluster": "^4.0.0",
     "@florajs/errors": "^4.0.0",
-    "@florajs/request-parser": "^4.0.0",
+    "@florajs/request-parser": "^5.0.0",
     "@xmldom/xmldom": "^0.8.10",
     "bunyan": "^1.8.15",
     "chokidar": "^3.6.0",
@@ -60,14 +60,16 @@
   "devDependencies": {
     "abstract-logging": "^2.0.1",
     "chai": "^4.3.7",
-    "eslint": "^8.46.0",
-    "eslint-config-prettier": "^8.10.0",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-mocha": "^10.5.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.14.0",
     "jsdoc": "^4.0.3",
     "mocha": "^10.7.0",
     "mock-fs": "^5.2.0",
     "pre-commit": "^1.2.2",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.2",
     "sinon": "^15.2.0",
     "sinon-chai": "^3.7.0"
   }
