--- a/package.json
+++ b/package.json
@@ -55,22 +55,22 @@
     "lodash.clonedeep": "^4.5.0",
     "luxon": "^3.5.0",
     "promise-events": "^0.2.4",
-    "serve-static": "^1.15.0"
+    "serve-static": "^1.16.2"
   },
   "devDependencies": {
     "abstract-logging": "^2.0.1",
-    "chai": "^4.3.7",
+    "chai": "4.4.0",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-mocha": "^10.5.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.14.0",
-    "jsdoc": "^4.0.3",
-    "mocha": "^10.7.0",
-    "mock-fs": "^5.2.0",
+    "jsdoc": "^4.0.4",
+    "mocha": "^11.0.1",
+    "mock-fs": "^5.4.1",
     "pre-commit": "^1.2.2",
     "prettier": "^3.4.2",
-    "sinon": "^15.2.0",
-    "sinon-chai": "^3.7.0"
+    "sinon": "^19.0.2",
+    "sinon-chai": "3.7.0"
   }
 }
