chore: update chokidar, pin xmldom

--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
     "@florajs/cluster": "^4.0.0",
     "@florajs/errors": "^4.0.0",
     "@florajs/request-parser": "^5.0.0",
-    "@xmldom/xmldom": "^0.8.10",
+    "@xmldom/xmldom": "0.8.10",
     "bunyan": "^1.8.15",
-    "chokidar": "^3.6.0",
+    "chokidar": "^4.0.3",
     "content-type": "^1.0.5",
     "lodash.clonedeep": "^4.5.0",
     "luxon": "^3.5.0",
